[gd_scene load_steps=6 format=3 uid="uid://dv4mg6kbr2f64"]

[ext_resource type="Script" path="res://level.gd" id="1_sutm3"]
[ext_resource type="PackedScene" uid="uid://pya8xf1cf3d7" path="res://goal.tscn" id="4_528tx"]
[ext_resource type="PackedScene" uid="uid://deanjfkolbxvy" path="res://borders.tscn" id="5_fmovg"]
[ext_resource type="Script" path="res://bot_connector.gd" id="5_tckb1"]
[ext_resource type="Script" path="res://bot_manager.gd" id="6_sdoiq"]

[node name="Level1" type="Node2D" node_paths=PackedStringArray("goal")]
script = ExtResource("1_sutm3")
goal = NodePath("Goal")

[node name="Goal" parent="." instance=ExtResource("4_528tx")]
position = Vector2(1100, 560)

[node name="Borders" parent="." instance=ExtResource("5_fmovg")]

[node name="Bots" type="Node2D" parent="."]

[node name="BotConnector" type="Node" parent="."]
script = ExtResource("5_tckb1")

[node name="BotManager" type="Node" parent="." node_paths=PackedStringArray("bot_container")]
script = ExtResource("6_sdoiq")
bot_container = NodePath("../Bots")

[node name="EpisodeTimer" type="Timer" parent="."]
one_shot = true
